--- a/CUADERNOS/2_analisis_dato.ipynb
+++ b/CUADERNOS/2_analisis_dato.ipynb
@@ -1455,7 +1455,7 @@
         "precision_test_lm = precision_score(y_test, preds_test_lm)\n",
         "auc_test_lm = roc_auc_score(y_test,preds_test_lm)\n",
         "\n",
-        "print('TRAIN')\n",
+        "print('TEST')\n",
         "print(f'Recall: {recall_test_lm:.4f}')\n",
         "print(f'Precision: {precision_test_lm:.4f}')\n",
         "print(f'AUC: {auc_test_lm:.4f}')\n",
@@ -1463,7 +1463,7 @@
         "# Matriz de confusión\n",
         "cm_test_lm = confusion_matrix(y_test, preds_test_lm)\n",
         "sns.heatmap(cm_test_lm, annot=True, fmt='d', cmap='Blues')\n",
-        "plt.title('Matriz de Confusión - TRAIN')\n",
+        "plt.title('Matriz de Confusión - TEST')\n",
         "plt.xlabel('Prediccion')\n",
         "plt.ylabel('Real')\n",
         "plt.show()\n",
@@ -1474,7 +1474,7 @@
         "plt.figure()\n",
         "plt.plot(fpr_test, tpr_test, label = f'AUC={auc_test_lm:.2f}')\n",
         "plt.plot([0,1],[0,1], linestyle='--', color='gray')\n",
-        "plt.title('Curva ROC - TRAIN')\n",
+        "plt.title('Curva ROC - TEST')\n",
         "plt.xlabel('False Positive Rate')\n",
         "plt.ylabel('True Positive Rate')\n",
         "plt.legend()\n",
